--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <!-- End of Navigation -->
 
         <div class="main-imgs-wrapper">
-            <img src="/images/left.jpg">
-            <img src="/images/center.jpg">
-            <img src="/images/right.jpg">
+            <img src="images/left.jpg">
+            <img src="images/center.jpg">
+            <img src="images/right.jpg">
         </div>
 
         <!-- Main Header -->
